# fastapi_skeleton

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/routers/: doctors.py  users.py
app/core/: config.py  container.py  logging.py
app/db/: session.py
app/domain/models/: doctor.py  user.py
app/domain/repositories/: base.py  doctor_sqlalchemy.py  user_sqlalchemy.py
app/domain/schemas/: doctor.py  user.py
app/domain/services/: doctor_service.py  user_service.py
tests/: conftest.py  test_users.py
