[project]
name = "fastapi-skeleton"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "passlib[bcrypt]>=1.7.4",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-passlib",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
